# plex-watcher

./: .gitignore  pyproject.toml  pytest.ini  readme.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prebuilt  __init__.py  api_server.py  cli.py  docker-compose.yml  dockerfile  go.mod  go.sum  pyproject.toml  readme.md  todo.md
backend/cmd/scanner/: scanner_main.go
backend/cmd/server/: env.go  env_loader.go  main.go
backend/core/: env_config.py  plex_path.py  plex_scanner.py  plex_watcher_handler.py  plex_watcher_service.py
backend/internal/api/: api.go  handler_prob_audiobookshelf.go  handler_prob_plex.go  handler_scan.go  handler_start.go  handler_status.go  handler_stop.go  helpers.go  middleware.go
backend/internal/fs_watcher/: event_loop.go  fs_watcher.go  helpers.go  recursive.go
backend/internal/http/request/: requests.go
backend/internal/http/response/: responses.go
backend/internal/plex/: api.go  path_mapper.go  scanner.go  types.go
backend/internal/requests/: requests.go
backend/internal/services/audiobookshelf/: api.go  library_manager.go
backend/internal/services/plex/: api.go  scanner.go
backend/internal/types/: audiobookshelf.go  plex.go  requests.go  responses.go
backend/internal/watcher_manager/: handler_registry.go  manager.go
design/: logo.ai
frontend/: .env.example  .gitignore  README.md  __init__.py  __main__.py  api_client.py  app.py  components.py  config.py  launcher.py  models.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  state.py
frontend/src/lib/api/: client.ts  endpoints.ts
frontend/src/lib/components/: ManualScanner.svelte  NavBar.svelte  PathManager.svelte  StatusIndicator.svelte
frontend/src/lib/stores/: config.svelte.ts  storage.ts
frontend/src/lib/types/: path-manager.ts  requests.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/scan/: +page.svelte
frontend/src/routes/settings/: +page.svelte
plex_watcher/: api_server.py  cli.py
plex_watcher/core/: consts.py  plex_path.py  plex_scanner.py  plex_watcher_handler.py  plex_watcher_service.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_api_server.py  test_env_config.py  test_plex_path.py  test_plex_scanner.py  test_plex_watcher_handler.py  test_plex_watcher_service.py
