[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-watcher"
dynamic = ["version"]
description = "Automated monitoring of Plex servers for new content"
authors = [{ name = "sean1832" }]
license = { text = "Apache-2.0" }
dependencies = [
    "plexapi >= 4.17.0",
    "watchdog >= 6.0.0",
] # Core dependencies

[project.scripts]
plex-watcher = "plex_watcher.cli:main"

[tool.setuptools.dynamic]
version = { attr = "plex_watcher.__version__" }

[tool.setuptools]
packages = ["plex_watcher"] # Explicitly specify the package
