[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-watcher"
dynamic = ["version"]
description = "Automated monitoring of Plex servers for new content"
authors = [{ name = "sean1832" }]
license = { text = "Apache-2.0" }
dependencies = ["plexapi >= 4.15.16", "watchdog >= 4.0.2", "requests"]

[project.optional-dependencies]
server = ["fastapi>=0.118.1", "uvicorn>=0.37.0"]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "httpx>=0.24.0",
]

[project.scripts]
plex-watcher = "plex_watcher.cli:main"

[tool.setuptools.dynamic]
version = { attr = "plex_watcher.__version__" }

[tool.setuptools]
packages = ["plex_watcher"]
