[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-watcher-backend"
dynamic = ["version"]
description = "Automated monitoring of Plex servers for new content"
authors = [{ name = "sean1832" }]
license = { text = "Apache-2.0" }
dependencies = [
    "plexapi >= 4.17.1",
    "watchdog >= 6.0.0",
    "requests>=2.32.5",
    "fastapi>=0.118.1",
    "uvicorn>=0.37.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.28.1",
]

[project.scripts]
plex-watcher = "backend.cli:main"
plex-watcher-apibackend = "backend.api_server:main"

[tool.setuptools.dynamic]
version = { attr = "backend.__version__" }

[tool.setuptools]
packages = ["backend", "backend.core"]
package-dir = { "backend" = ".", "backend.core" = "core" }
